--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "html2canvas": "^1.4.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
