--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "allotment": "^1.20.2",
     "html2canvas": "^1.4.1",
+    "markdown-it": "^14.1.0",
+    "markdown-it-deflist": "^3.0.0",
+    "markdown-it-implicit-figures": "^0.12.0",
+    "markdown-it-ruby": "^0.1.1",
+    "markdown-it-table-of-contents": "^0.6.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
+    "react-split-pane": "^0.1.92"
   },
   "devDependencies": {
     "@types/node": "^20",
