--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.49",
+    "postcss-px-to-viewport-8-plugin": "^1.2.5",
+    "sass": "^1.83.1",
     "typescript": "^5"
   }
 }
